[package]
name = "pyo3io"
version = "0.1.0"
edition = "2024"

[dependencies]
# pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# convert code to a library. rename main.rs to lib.rs too.
# [lib]
# name = "pyo3io"
# -type = ["cdylib"]
